tdf#102997 Fix Error in OOXML Transparency Conversion Math

This fixes the import logic for tdf#100830 to handle transparencies other than 50%.

Change-Id: If4e2e369a9674488878bb0a4378d48292ea4e0cb