sw/qa/extras/ooxmlimport/ooxmlimport.cxx
@@ -3297,7 +3297,7 @@ DECLARE_OOXMLIMPORT_TEST(testTdf99140, "tdf99140.docx")
 DECLARE_OOXMLIMPORT_TEST(testTdf100830, "tdf100830.docx")
 {
     // FillTransparence wasn't imported, this was 0.
-    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int16>(50), getProperty<sal_Int16>(getShape(1), "FillTransparence"));
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int16>(30), getProperty<sal_Int16>(getShape(1), "FillTransparence"));
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
